k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: lumina-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: lumina-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
